fixed homepage H1 spacing

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -81,6 +81,12 @@ p, h1 {
   }
 }
 
+.home {
+  h1 {
+    margin: 0 0 15px 0;
+  }
+}
+
 .weatherMain {
   margin: 0 auto;
   max-width: 100%;
